--- a/app/src/main/res/layout/fragment_exercise_list.xml
+++ b/app/src/main/res/layout/fragment_exercise_list.xml
@@ -11,10 +11,9 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp" />
 
-    <TextView
-        android:id="@+id/exerciseListEmptyTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ProgressBar
+        android:id="@+id/exerciseListProgress"
         android:layout_gravity="center"
-        android:text="@string/empty_text_no_exercises" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </FrameLayout>
