--- a/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        android:id="@+id/program">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
@@ -18,14 +19,32 @@
             android:id="@+id/nav_exercises"
             android:icon="@drawable/ic_exercises_black"
             android:title="@string/exercises" />
+    </group>
+
+    <group
+        android:id="@+id/social"
+        android:checkableBehavior="single"
+        android:menuCategory="container">
         <item
-            android:id="@+id/nav_statistics"
-            android:icon="@drawable/ic_statistics_black"
-            android:title="@string/statistics" />
+            android:id="@+id/nav_buddies"
+            android:icon="@drawable/ic_buddies"
+            android:title="@string/buddies" />
+
+        <item
+            android:id="@+id/nav_chat"
+            android:icon="@drawable/ic_chat"
+            android:title="@string/chat" />
+    </group>
+
+    <group
+        android:id="@+id/settings"
+        android:checkableBehavior="none">
+
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black"
+            android:menuCategory="system"
             android:title="@string/settings" />
-    </group>
 
+    </group>
 </menu>
