--- a/app/src/main/res/layout/fragment_onboarding_birth_date_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_birth_date_input.xml
@@ -10,20 +10,20 @@
         android:layout_height="match_parent">
 
         <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/dialog_date_date_picker"
+            android:id="@+id/birthdateDatePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:calendarViewShown="false"
-
-            android:datePickerMode="spinner"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
+
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:targetApi="lollipop" />
 
         <TextView
