--- a/app/src/main/res/layout/fragment_onboarding_username_input.xml
+++ b/app/src/main/res/layout/fragment_onboarding_username_input.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/emailInputEditText"
+            android:id="@+id/usernameInputEditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
