--- a/app/src/main/res/layout/fragment_schedule_detail.xml
+++ b/app/src/main/res/layout/fragment_schedule_detail.xml
@@ -20,7 +20,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:layout_marginRight="8dp"
+        android:id="@+id/scheduleDetailInformation">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:textColor="#3C3B3A"
+            android:textStyle="bold"
+            android:id="@+id/scheduleNameTextView"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,4 +46,18 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/scheduleDetailProgress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 </android.support.constraint.ConstraintLayout>
